--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,9 @@ FROM golang:1.21 as builder
 WORKDIR /app
 COPY . .
 
-RUN go mod init golang-app && go mod tidy
+COPY go.mod ./
+COPY go.sum ./
+RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -o main
 
 FROM alpine:latest
